[tool.poetry]
name = "helloheart-airflow-utils"
version = "0.2.2"
description = "Apache Airflow Utilities"
readme = "README.md"
authors = ["Ory Jonay <ory.jonay@helloheart.com>"]
license = "MIT"
homepage = "https://github.com/Hello-Heart/helloheart-airflow-utils"

[tool.poetry.dependencies]
python = "^3.6.2,<3.9"
apache-airflow = "<=1.10.12"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
bandit = "<1.7"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:the imp module is deprecated in favour of importlib:DeprecationWarning',
    'ignore:Using or importing the ABCs from:DeprecationWarning',
    ]